# SDL_spine

./: Android.mk  CMakeLists.txt  README.md
include/spine/: spine-sdl.h
src/spine/: spine-sdl.cpp
